--- a/retilla/Base.lproj/Main.storyboard
+++ b/retilla/Base.lproj/Main.storyboard
@@ -145,6 +145,36 @@
             </objects>
             <point key="canvasLocation" x="924" y="-460.11994002998506"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="RJ1-UJ-fss">
+            <objects>
+                <viewController id="Vre-ix-tMU" customClass="MainMapVC" customModule="retilla" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dRi-cP-j2s">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="IuO-tI-EPr">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="IuO-tI-EPr" firstAttribute="trailing" secondItem="dgX-xm-v1V" secondAttribute="trailing" id="Rhm-hk-RsQ"/>
+                            <constraint firstItem="IuO-tI-EPr" firstAttribute="top" secondItem="dRi-cP-j2s" secondAttribute="top" id="lKe-yG-rZO"/>
+                            <constraint firstItem="IuO-tI-EPr" firstAttribute="leading" secondItem="dgX-xm-v1V" secondAttribute="leading" id="yQL-0e-JqU"/>
+                            <constraint firstItem="IuO-tI-EPr" firstAttribute="bottom" secondItem="dgX-xm-v1V" secondAttribute="bottom" id="zVC-wh-5EP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dgX-xm-v1V"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="KmI-8k-jnc"/>
+                    <connections>
+                        <outlet property="map" destination="IuO-tI-EPr" id="67Y-zB-vSM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1AK-1y-Odv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="924" y="239.73013493253376"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="5Qf-An-w3j">
             <objects>
@@ -157,6 +187,7 @@
                     <connections>
                         <segue destination="Cvv-4y-b6v" kind="relationship" relationship="viewControllers" id="bp3-U9-e8r"/>
                         <segue destination="E2X-nO-2OY" kind="relationship" relationship="viewControllers" id="eyK-7W-6MO"/>
+                        <segue destination="Vre-ix-tMU" kind="relationship" relationship="viewControllers" id="HVb-d1-NIG"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nGQ-en-rzP" userLabel="First Responder" sceneMemberID="firstResponder"/>
